# dictionaryBuilder

./: .gitmodules  CMakeLists.txt  README.md  build.sh  dict.db  main.cpp
src/: data.cpp  data.hpp  dict.db  main.cpp
